<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:paddingStart="@dimen/dimen_normal"
    android:paddingTop="@dimen/dimen_normal"
    android:paddingEnd="@dimen/dimen_normal"
    tools:context=".presenter.weather.WeatherActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:elevation="@dimen/dimen_small"
        android:padding="@dimen/dimen_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_description"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:textSize="16sp" />

            <Button
                android:id="@+id/searchCityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cityNameEditText"
                android:text="@string/search"
                android:textSize="16sp" />

            <Button
                android:id="@+id/navigateToTemperatureButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/searchCityButton"
                android:enabled="false"
                android:text="@string/temperature_and_humidity"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchSection">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:elevation="@dimen/dimen_small"
            android:padding="@dimen/dimen_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchSection">

            <TextView
                android:id="@+id/errorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4DFFFFFF"
                android:padding="@dimen/dimen_normal"
                android:text="@string/error_description"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressbarLoading"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_normal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cityCodeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/city_code" />

            <TextView
                android:id="@+id/cityNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityCodeTextView"
                tools:text="@string/city_name" />

            <TextView
                android:id="@+id/dateTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="วันและเวลา" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weatherRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:paddingTop="@dimen/dimen_small"
                android:paddingBottom="@dimen/dimen_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityNameTextView"
                tools:itemCount="8"
                tools:listitem="@layout/item_weather" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
